azure-templates/template.json
{
    "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "vaults_kv_az1_name": {
            "defaultValue": "kv-az1",
            "type": "String"
        },
        "virtualNetworks_VNet1_name": {
            "defaultValue": "VNet1",
            "type": "String"
        },
        "virtualMachines_Jumpbox_name": {
            "defaultValue": "Jumpbox",
            "type": "String"
        },
        "actionGroups_NSG_Rules_name": {
            "defaultValue": "NSG Rules",
            "type": "String"
        },
        "sshPublicKeys_Jumpbox_key_name": {
            "defaultValue": "Jumpbox_key",
            "type": "String"
        },
        "activitylogalerts_NSG_Rules_name": {
            "defaultValue": "NSG Rules",
            "type": "String"
        },
        "publicIPAddresses_Jumpbox_ip_name": {
            "defaultValue": "Jumpbox-ip",
            "type": "String"
        },
        "virtualMachines_BackendServer_name": {
            "defaultValue": "BackendServer",
            "type": "String"
        },
        "diskEncryptionSets_des_backend_name": {
            "defaultValue": "des-backend",
            "type": "String"
        },
        "sshPublicKeys_BackendServer_key_name": {
            "defaultValue": "BackendServer_key",
            "type": "String"
        },
        "networkInterfaces_jumpbox695_z1_name": {
            "defaultValue": "jumpbox695_z1",
            "type": "String"
        },
        "networkSecurityGroups_Backend_NSG_name": {
            "defaultValue": "Backend-NSG",
            "type": "String"
        },
        "networkSecurityGroups_Jumpbox_nsg_name": {
            "defaultValue": "Jumpbox-nsg",
            "type": "String"
        },
        "networkInterfaces_backendserver560_z1_name": {
            "defaultValue": "backendserver560_z1",
            "type": "String"
        },
        "networkSecurityGroups_BackendServer_nsg_name": {
            "defaultValue": "BackendServer-nsg",
            "type": "String"
        }
    },
    "variables": {},
    "resources": [
        {
            "type": "Microsoft.Compute/sshPublicKeys",
            "apiVersion": "2025-11-01",
            "name": "[parameters('sshPublicKeys_BackendServer_key_name')]",
            "location": "switzerlandnorth",
            "properties": {
                "publicKey": "ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQDAt+o1FVfsIABhTJlvZe8U6PjZ2ITKE4z+9tbBaoyq12j6uQWeHv2GEDpk2abU4LRjC69bjVxSdwy2/4zR2kKuhvBj8nXxHidNUKmC3xJTJD4fEClhoMLuxyIYSSB4greY9tovk+CR9Qfx28X1o+U9QKaJKfFpx+j45oWuXltJ/R2VZd+KKChpVwkom5J0Do0l8BjhdmB+xetVqMAhIhsNu5JpJOMRSrVCg+3vpiEH/CXYH1k1Ior0aLX3dTuKjPnqWBpsoaYIPr8S54Z5iCSBQUJDRMVohmjAGVTPiWAvKaua9hEqLZnMXY5+Ovy0WCnKRSp1gVjaLMTKk1f/fcYsTse1tHK+we6Op0UUaclRcPOoLjWrFJ1A+5uT/qBARW+ltBK2gv2MGOsbDzzkQc6XNs1tqhNI/8A2es7EDYaUZeo1wA [...]
            }
        },
        {
            "type": "Microsoft.Compute/sshPublicKeys",
            "apiVersion": "2025-11-01",
            "name": "[parameters('sshPublicKeys_Jumpbox_key_name')]",
            "location": "switzerlandnorth",
            "properties": {
                "publicKey": "ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQC109dg5dyLGWx75UEbbTN/9qyIgKva6R7s/ty/BXwsGaETgDXlA9453+6a7TthEGz9GVVWdXRTZVy/oaLm2xjd3xrDIMbMW9ihTbqKkPCwXKJYUv9NRUsoos+duONLY24zoifGn2WOLviAMaG2dy75vOxOjh2SVi6knIjmxB5ng3N1Wy99blbnbK9CE4RGA7YzgerDVGL+TAJnNbBl5aItwAVG3w+sGHl/4Nq0XGLjxjZHDXVThs7rUDzZT9NEcY61BsAZfD5MwNA+xhEbAAWyI1fDev3sP3rWxEXMAIawtt7wk4gxgRuui1SaeU8QBMnxKIjjvVvC7WSy4yACyRwbvONqe/JP3yaELW4N0FMZUEdtk9DTEt/V6OQYXR7l2+hlmMSxkUXYn1gfstpvBcSEnM+a7FCKhDLDekUi06vQ2f04qC [...]
            }
        },
        {
            "type": "microsoft.insights/actionGroups",
            "apiVersion": "2024-10-01-preview",
            "name": "[parameters('actionGroups_NSG_Rules_name')]",
            "location": "Global",
            "properties": {
                "groupShortName": "[parameters('actionGroups_NSG_Rules_name')]",
                "enabled": true,
                "emailReceivers": [
                    {
                        "name": "Email0_-EmailAction-",
                        "emailAddress": "2216609@uj.edu.sa",
                        "useCommonAlertSchema": true
                    }
                ],
                "smsReceivers": [],
                "webhookReceivers": [],
                "eventHubReceivers": [],
                "itsmReceivers": [],
                "azureAppPushReceivers": [],
                "automationRunbookReceivers": [],
                "voiceReceivers": [],
                "logicAppReceivers": [],
                "azureFunctionReceivers": [],
                "armRoleReceivers": []
            }
        },
        {
            "type": "Microsoft.KeyVault/vaults",
            "apiVersion": "2026-03-01-preview",
            "name": "[parameters('vaults_kv_az1_name')]",
            "location": "switzerlandnorth",
            "properties": {
                "sku": {
                    "family": "A",
                    "name": "Standard"
                },
                "tenantId": "b453d91b-6ac1-4b61-b8b8-5e65e422233f",
                "accessPolicies": [],
                "enabledForDeployment": false,
                "enabledForDiskEncryption": true,
                "enabledForTemplateDeployment": false,
                "enableSoftDelete": true,
                "softDeleteRetentionInDays": 90,
                "enableRbacAuthorization": true,
                "enablePurgeProtection": true,
                "vaultUri": "[concat('https://', parameters('vaults_kv_az1_name'), '.vault.azure.net/')]",
                "provisioningState": "Succeeded",
                "publicNetworkAccess": "Enabled"
            }
        },
        {
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "2025-05-01",
            "name": "[parameters('networkSecurityGroups_Backend_NSG_name')]",
            "location": "switzerlandnorth",
            "properties": {
                "securityRules": [
                    {
                        "name": "Allow-Ping-From-Jumpbox",
                        "id": "[resourceId('Microsoft.Network/networkSecurityGroups/securityRules', parameters('networkSecurityGroups_Backend_NSG_name'), 'Allow-Ping-From-Jumpbox')]",
                        "properties": {
                            "protocol": "ICMP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "10.0.1.4",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 100,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    }
                ]
            }
        },
        {
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "2025-05-01",
            "name": "[parameters('networkSecurityGroups_BackendServer_nsg_name')]",
            "location": "switzerlandnorth",
            "properties": {
                "securityRules": []
            }
        },
        {
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "2025-05-01",
            "name": "[parameters('networkSecurityGroups_Jumpbox_nsg_name')]",
            "location": "switzerlandnorth",
            "properties": {
                "securityRules": [
                    {
                        "name": "SSH",
                        "id": "[resourceId('Microsoft.Network/networkSecurityGroups/securityRules', parameters('networkSecurityGroups_Jumpbox_nsg_name'), 'SSH')]",
                        "properties": {
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "22",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 300,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    }
                ]
            }
        },
        {
            "type": "Microsoft.Network/publicIPAddresses",
            "apiVersion": "2025-05-01",
            "name": "[parameters('publicIPAddresses_Jumpbox_ip_name')]",
            "location": "switzerlandnorth",
            "sku": {
                "name": "Standard",
                "tier": "Regional"
            },
            "zones": [
                "1"
            ],
            "properties": {
                "ipAddress": "20.250.144.206",
                "publicIPAddressVersion": "IPv4",
                "publicIPAllocationMethod": "Static",
                "idleTimeoutInMinutes": 4,
                "ipTags": [],
                "ddosSettings": {
                    "protectionMode": "VirtualNetworkInherited"
                }
            }
        },
        {
            "type": "Microsoft.Compute/diskEncryptionSets",
            "apiVersion": "2025-01-02",
            "name": "[parameters('diskEncryptionSets_des_backend_name')]",
            "location": "switzerlandnorth",
            "dependsOn": [
                "[resourceId('Microsoft.KeyVault/vaults', parameters('vaults_kv_az1_name'))]"
            ],
            "identity": {
                "type": "SystemAssigned"
            },
            "properties": {
                "activeKey": {
                    "sourceVault": {
                        "id": "[resourceId('Microsoft.KeyVault/vaults', parameters('vaults_kv_az1_name'))]"
                    },
                    "keyUrl": "https://kv-az1.vault.azure.net/keys/RSA-key1/63d441a1a57240708546cb8a3fd599c3"
                },
                "encryptionType": "EncryptionAtRestWithCustomerKey"
            }
        },
        {
            "type": "Microsoft.Compute/virtualMachines",
            "apiVersion": "2025-11-01",
            "name": "[parameters('virtualMachines_BackendServer_name')]",
            "location": "switzerlandnorth",
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_backendserver560_z1_name'))]"
            ],
            "zones": [
                "1"
            ],
            "identity": {
                "type": "SystemAssigned"
            },
            "properties": {
                "hardwareProfile": {
                    "vmSize": "Standard_B2as_v2"
                },
                "additionalCapabilities": {
                    "hibernationEnabled": false
                },
                "storageProfile": {
                    "imageReference": {
                        "publisher": "canonical",
                        "offer": "ubuntu-24_04-lts",
                        "sku": "server",
                        "version": "latest"
                    },
                    "osDisk": {
                        "osType": "Linux",
                        "name": "[concat(parameters('virtualMachines_BackendServer_name'), '_OsDisk_1_bb50f9f798f047488f8c5b6f21c00bd6')]",
                        "createOption": "FromImage",
                        "caching": "ReadWrite",
                        "managedDisk": {
                            "id": "[resourceId('Microsoft.Compute/disks', concat(parameters('virtualMachines_BackendServer_name'), '_OsDisk_1_bb50f9f798f047488f8c5b6f21c00bd6'))]"
                        },
                        "deleteOption": "Delete"
                    },
                    "dataDisks": [
                        {
                            "lun": 0,
                            "name": "backend-datadisk",
                            "createOption": "Attach",
                            "caching": "ReadOnly",
                            "writeAcceleratorEnabled": false,
                            "managedDisk": {
                                "id": "[resourceId('Microsoft.Compute/disks', 'backend-datadisk')]"
                            },
                            "deleteOption": "Detach",
                            "toBeDetached": false
                        }
                    ],
                    "diskControllerType": "SCSI"
                },
                "osProfile": {
                    "computerName": "[parameters('virtualMachines_BackendServer_name')]",
                    "linuxConfiguration": {
                        "disablePasswordAuthentication": true,
                        "ssh": {
                            "publicKeys": [
                                {
                                    "path": "/home/azureuser/.ssh/authorized_keys",
                                    "keyData": "ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQDAt+o1FVfsIABhTJlvZe8U6PjZ2ITKE4z+9tbBaoyq12j6uQWeHv2GEDpk2abU4LRjC69bjVxSdwy2/4zR2kKuhvBj8nXxHidNUKmC3xJTJD4fEClhoMLuxyIYSSB4greY9tovk+CR9Qfx28X1o+U9QKaJKfFpx+j45oWuXltJ/R2VZd+KKChpVwkom5J0Do0l8BjhdmB+xetVqMAhIhsNu5JpJOMRSrVCg+3vpiEH/CXYH1k1Ior0aLX3dTuKjPnqWBpsoaYIPr8S54Z5iCSBQUJDRMVohmjAGVTPiWAvKaua9hEqLZnMXY5+Ovy0WCnKRSp1gVjaLMTKk1f/fcYsTse1tHK+we6Op0UUaclRcPOoLjWrFJ1A+5uT/qBARW+ltBK2gv2MGOsbDzzkQc6XNs1tqhNI [...]
                                }
                            ]
                        },
                        "provisionVMAgent": true,
                        "patchSettings": {
                            "patchMode": "ImageDefault",
                            "assessmentMode": "ImageDefault"
                        }
                    },
                    "secrets": [],
                    "allowExtensionOperations": true,
                    "requireGuestProvisionSignal": true,
                    "adminUsername": "azureuser"
                },
                "securityProfile": {
                    "uefiSettings": {
                        "secureBootEnabled": true,
                        "vTpmEnabled": true
                    },
                    "securityType": "TrustedLaunch"
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_backendserver560_z1_name'))]",
                            "properties": {
                                "deleteOption": "Detach"
                            }
                        }
                    ]
                },
                "diagnosticsProfile": {
                    "bootDiagnostics": {
                        "enabled": true
                    }
                }
            }
        },
        {
            "type": "Microsoft.Compute/virtualMachines",
            "apiVersion": "2025-11-01",
            "name": "[parameters('virtualMachines_Jumpbox_name')]",
            "location": "switzerlandnorth",
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_jumpbox695_z1_name'))]"
            ],
            "zones": [
                "1"
            ],
            "properties": {
                "hardwareProfile": {
                    "vmSize": "Standard_B2as_v2"
                },
                "additionalCapabilities": {
                    "hibernationEnabled": false
                },
                "storageProfile": {
                    "imageReference": {
                        "publisher": "canonical",
                        "offer": "ubuntu-24_04-lts",
                        "sku": "server",
                        "version": "latest"
                    },
                    "osDisk": {
                        "osType": "Linux",
                        "name": "[concat(parameters('virtualMachines_Jumpbox_name'), '_OsDisk_1_b606f3514af04830a0b7f2fe82d98971')]",
                        "createOption": "FromImage",
                        "caching": "ReadWrite",
                        "managedDisk": {
                            "id": "[resourceId('Microsoft.Compute/disks', concat(parameters('virtualMachines_Jumpbox_name'), '_OsDisk_1_b606f3514af04830a0b7f2fe82d98971'))]"
                        },
                        "deleteOption": "Delete"
                    },
                    "dataDisks": [],
                    "diskControllerType": "SCSI"
                },
                "osProfile": {
                    "computerName": "[parameters('virtualMachines_Jumpbox_name')]",
                    "linuxConfiguration": {
                        "disablePasswordAuthentication": true,
                        "ssh": {
                            "publicKeys": [
                                {
                                    "path": "/home/azureuser/.ssh/authorized_keys",
                                    "keyData": "ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQC109dg5dyLGWx75UEbbTN/9qyIgKva6R7s/ty/BXwsGaETgDXlA9453+6a7TthEGz9GVVWdXRTZVy/oaLm2xjd3xrDIMbMW9ihTbqKkPCwXKJYUv9NRUsoos+duONLY24zoifGn2WOLviAMaG2dy75vOxOjh2SVi6knIjmxB5ng3N1Wy99blbnbK9CE4RGA7YzgerDVGL+TAJnNbBl5aItwAVG3w+sGHl/4Nq0XGLjxjZHDXVThs7rUDzZT9NEcY61BsAZfD5MwNA+xhEbAAWyI1fDev3sP3rWxEXMAIawtt7wk4gxgRuui1SaeU8QBMnxKIjjvVvC7WSy4yACyRwbvONqe/JP3yaELW4N0FMZUEdtk9DTEt/V6OQYXR7l2+hlmMSxkUXYn1gfstpvBcSEnM+a7FCK [...]
                                }
                            ]
                        },
                        "provisionVMAgent": true,
                        "patchSettings": {
                            "patchMode": "ImageDefault",
                            "assessmentMode": "ImageDefault"
                        }
                    },
                    "secrets": [],
                    "allowExtensionOperations": true,
                    "requireGuestProvisionSignal": true,
                    "adminUsername": "azureuser"
                },
                "securityProfile": {
                    "uefiSettings": {
                        "secureBootEnabled": true,
                        "vTpmEnabled": true
                    },
                    "securityType": "TrustedLaunch"
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_jumpbox695_z1_name'))]",
                            "properties": {
                                "deleteOption": "Detach"
                            }
                        }
                    ]
                },
                "diagnosticsProfile": {
                    "bootDiagnostics": {
                        "enabled": true
                    }
                }
            }
        },
        {
            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
            "apiVersion": "2025-05-01",
            "name": "[concat(parameters('networkSecurityGroups_Backend_NSG_name'), '/Allow-Ping-From-Jumpbox')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_Backend_NSG_name'))]"
            ],
            "properties": {
                "protocol": "ICMP",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "10.0.1.4",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 100,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
            }
        },
        {
            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
            "apiVersion": "2025-05-01",
            "name": "[concat(parameters('networkSecurityGroups_Jumpbox_nsg_name'), '/SSH')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_Jumpbox_nsg_name'))]"
            ],
            "properties": {
                "protocol": "TCP",
                "sourcePortRange": "*",
                "destinationPortRange": "22",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 300,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
            }
        },
        {
            "type": "Microsoft.Network/virtualNetworks",
            "apiVersion": "2025-05-01",
            "name": "[parameters('virtualNetworks_VNet1_name')]",
            "location": "switzerlandnorth",
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_Backend_NSG_name'))]"
            ],
            "properties": {
                "addressSpace": {
                    "addressPrefixes": [
                        "10.0.0.0/16"
                    ]
                },
                "encryption": {
                    "enabled": false,
                    "enforcement": "AllowUnencrypted"
                },
                "privateEndpointVNetPolicies": "Disabled",
                "subnets": [
                    {
                        "name": "default",
                        "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworks_VNet1_name'), 'default')]",
                        "properties": {
                            "addressPrefixes": [
                                "10.0.0.0/24"
                            ],
                            "delegations": [],
                            "privateEndpointNetworkPolicies": "Disabled",
                            "privateLinkServiceNetworkPolicies": "Enabled"
                        }
                    },
                    {
                        "name": "Public-Subnet",
                        "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworks_VNet1_name'), 'Public-Subnet')]",
                        "properties": {
                            "addressPrefixes": [
                                "10.0.1.0/24"
                            ],
                            "delegations": [],
                            "privateEndpointNetworkPolicies": "Disabled",
                            "privateLinkServiceNetworkPolicies": "Enabled"
                        }
                    },
                    {
                        "name": "Private-Subnet",
                        "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworks_VNet1_name'), 'Private-Subnet')]",
                        "properties": {
                            "addressPrefixes": [
                                "10.0.2.0/24"
                            ],
                            "networkSecurityGroup": {
                                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_Backend_NSG_name'))]"
                            },
                            "delegations": [],
                            "privateEndpointNetworkPolicies": "Disabled",
                            "privateLinkServiceNetworkPolicies": "Enabled"
                        }
                    }
                ],
                "virtualNetworkPeerings": [],
                "enableDdosProtection": false
            }
        },
        {
            "type": "Microsoft.Network/virtualNetworks/subnets",
            "apiVersion": "2025-05-01",
            "name": "[concat(parameters('virtualNetworks_VNet1_name'), '/default')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetworks_VNet1_name'))]"
            ],
            "properties": {
                "addressPrefixes": [
                    "10.0.0.0/24"
                ],
                "delegations": [],
                "privateEndpointNetworkPolicies": "Disabled",
                "privateLinkServiceNetworkPolicies": "Enabled"
            }
        },
        {
            "type": "Microsoft.Network/virtualNetworks/subnets",
            "apiVersion": "2025-05-01",
            "name": "[concat(parameters('virtualNetworks_VNet1_name'), '/Public-Subnet')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetworks_VNet1_name'))]"
            ],
            "properties": {
                "addressPrefixes": [
                    "10.0.1.0/24"
                ],
                "delegations": [],
                "privateEndpointNetworkPolicies": "Disabled",
                "privateLinkServiceNetworkPolicies": "Enabled"
            }
        },
        {
            "type": "microsoft.insights/activitylogalerts",
            "apiVersion": "2026-01-01",
            "name": "[parameters('activitylogalerts_NSG_Rules_name')]",
            "location": "global",
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_Backend_NSG_name'))]",
                "[resourceId('microsoft.insights/actionGroups', parameters('actionGroups_NSG_Rules_name'))]"
            ],
            "properties": {
                "scopes": [
                    "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_Backend_NSG_name'))]"
                ],
                "condition": {
                    "allOf": [
                        {
                            "field": "category",
                            "equals": "Administrative"
                        }
                    ]
                },
                "actions": {
                    "actionGroups": [
                        {
                            "actionGroupId": "[resourceId('microsoft.insights/actionGroups', parameters('actionGroups_NSG_Rules_name'))]",
                            "webhookProperties": {}
                        }
                    ]
                },
                "enabled": true
            }
        },
        {
            "type": "Microsoft.Network/networkInterfaces",
            "apiVersion": "2025-05-01",
            "name": "[parameters('networkInterfaces_backendserver560_z1_name')]",
            "location": "switzerlandnorth",
            "dependsOn": [
                "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworks_VNet1_name'), 'Private-Subnet')]",
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_BackendServer_nsg_name'))]"
            ],
            "kind": "Regular",
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "ipconfig1",
                        "id": "[concat(resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_backendserver560_z1_name')), '/ipConfigurations/ipconfig1')]",
                        "properties": {
                            "privateIPAddress": "10.0.2.4",
                            "privateIPAllocationMethod": "Dynamic",
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworks_VNet1_name'), 'Private-Subnet')]"
                            },
                            "primary": true,
                            "privateIPAddressVersion": "IPv4"
                        }
                    }
                ],
                "dnsSettings": {
                    "dnsServers": []
                },
                "enableAcceleratedNetworking": true,
                "enableIPForwarding": false,
                "disableTcpStateTracking": false,
                "networkSecurityGroup": {
                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_BackendServer_nsg_name'))]"
                },
                "nicType": "Standard",
                "auxiliaryMode": "None",
                "auxiliarySku": "None"
            }
        },
        {
            "type": "Microsoft.Network/virtualNetworks/subnets",
            "apiVersion": "2025-05-01",
            "name": "[concat(parameters('virtualNetworks_VNet1_name'), '/Private-Subnet')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetworks_VNet1_name'))]",
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_Backend_NSG_name'))]"
            ],
            "properties": {
                "addressPrefixes": [
                    "10.0.2.0/24"
                ],
                "networkSecurityGroup": {
                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_Backend_NSG_name'))]"
                },
                "delegations": [],
                "privateEndpointNetworkPolicies": "Disabled",
                "privateLinkServiceNetworkPolicies": "Enabled"
            }
        },
        {
            "type": "Microsoft.Network/networkInterfaces",
            "apiVersion": "2025-05-01",
            "name": "[parameters('networkInterfaces_jumpbox695_z1_name')]",
            "location": "switzerlandnorth",
            "dependsOn": [
                "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_Jumpbox_ip_name'))]",
                "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworks_VNet1_name'), 'Public-Subnet')]",
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_Jumpbox_nsg_name'))]"
            ],
            "kind": "Regular",
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "ipconfig1",
                        "id": "[concat(resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_jumpbox695_z1_name')), '/ipConfigurations/ipconfig1')]",
                        "properties": {
                            "privateIPAddress": "10.0.1.4",
                            "privateIPAllocationMethod": "Dynamic",
                            "publicIPAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_Jumpbox_ip_name'))]",
                                "properties": {
                                    "deleteOption": "Detach"
                                }
                            },
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworks_VNet1_name'), 'Public-Subnet')]"
                            },
                            "primary": true,
                            "privateIPAddressVersion": "IPv4"
                        }
                    }
                ],
                "dnsSettings": {
                    "dnsServers": []
                },
                "enableAcceleratedNetworking": true,
                "enableIPForwarding": false,
                "disableTcpStateTracking": false,
                "networkSecurityGroup": {
                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_Jumpbox_nsg_name'))]"
                },
                "nicType": "Standard",
                "auxiliaryMode": "None",
                "auxiliarySku": "None"
            }
        }
    ]
}
